FM region list bleed over fix

--- a/app/assets/stylesheets/facilities_management/long_list.scss
+++ b/app/assets/stylesheets/facilities_management/long_list.scss
@@ -32,3 +32,12 @@
   margin-left: 0px !important;
   padding-left: 5px;
 }
+
+
+.CCS-fm-region-filter-check-box-label {
+  background-color: white;
+  height: 26px;
+  overflow-wrap: break-word;
+  margin-left: 0px !important;
+  padding-left: 5px;
+}
